linked confirm dialog to loading page. TODO: connect request service's model

--- a/views/index.html
+++ b/views/index.html
@@ -76,12 +76,14 @@
 					pedir un taxi de la direcci&oacute;n
 				</p>
 				<p>
-					<b id="txtAddressConfirm">XXX</b>
+					<b id="txtAddressConfirm"></b>
 				</p>
-
+				<button id="btnHailConfirm" data-theme="e">
+					<i class="icon-phone"></i> Pedir Taxi
+				</button>
 			</div>
-			<div data-role="footer" data-position="fixed" data-theme="e">
-				<h1> </h1>
+			<div data-role="footer" data-position="fixed" data-theme="a">
+
 			</div>
 
 		</div>
