--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Taxigol</title>
+
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet">
+
 	<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+
 	<!--script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script-->
 
 	<link href="../css/common.css" rel="stylesheet">
@@ -114,16 +118,23 @@
 		-->
 		<div data-role="page" id="success-page" data-theme="b">
 			<div data-role="header" data-theme="e">
-				<h1> Confirmando </h1>
+				<h1><i class="icon-rocket"></i> Taxi confirmado </h1>
 			</div>
 			<div data-role="content" data-theme="b">
-				<p>Tu servicio llegar&aacute; pronto</p>
+				<img src="http://placehold.it/500x500" />
+				<p>Placa:</p>
+				<p></p>
+				<p>Nombre del conductor:</p>
+				<p></p>
+				<p> Celular del conductor: </p>
+				<p></p>
+				<p><i class="icon-smile"></i> Tu servicio llegar&aacute; pronto</p>
 
 			</div>
 			<div data-role="footer" data-position="fixed" data-theme="e">
 				<div data-role="navbar">
 					<ul>
-						<li><button id="btnHail">Pedir Taxi</button></li>
+						<li><button id="btnFollowTaxi"><i class="icon-search"></i> Ver Taxi</button></li>
 					</ul>
 				</div>
 			</div>
