--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,33 @@
-#map-page, #map-canvas {
-	width: 100%; height: 100%; padding: 0;
+#map-page, #map-container{
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
 }
 
+#map-canvas{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: -50px;
+}
+
+#btnHail{
+	position: fixed;
+	bottom: 10px;
+	left: 10%;
+	right: 10%;
+
+}
+
+#loading-page [data-role=content] {
+	height: 100%;
+}
+
+#loadingIndicator{
+	position: fixed;
+	width:1px;
+	height:1px;
+	top: 50%;
+	left: 50%;
+}
