--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
 	<script src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-	<script src="http://maps.google.com/maps/api/js?v=3&sensor=true" type="text/javascript"></script>
+	<script src="http://maps.google.com/maps/api/js?v=3&sensor=true&libraries=geometry" type="text/javascript"></script>
 	<!--script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script-->
 
 
