--- a/css/common.css
+++ b/css/common.css
@@ -31,3 +31,17 @@
 	top: 50%;
 	left: 50%;
 }
+
+#follow-page, #map-container2{
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+#map-canvas2{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: -50px;
+}
